releases/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-svc
  namespace: nordmart-dev-apps
spec:
  ports:
    - name: "elasticsearch-port"
      port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: nordmart-dev-apps
spec:
  serviceName: "elasticsearch"
  selector:
    matchLabels:
      app: elasticsearch
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - image: elasticsearch:7.5.1
          name: elasticsearch
          ports:
            - containerPort: 9200
              name: tcp
#---
#apiVersion: elasticsearch.k8s.elastic.co/v1beta1
#kind: Elasticsearch
#metadata:
#  name: elasticsearch
#  namespace: nordmart-dev-apps
#spec:
#  version: 7.5.0
#  nodeSets:
#    - name: default
#      count: 1
#      config:
#        node.master: true
#        node.data: true
#        node.ingest: true
#        node.store.allow_mmap: false
