releases/kafka-ephemeral-single.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka-svc
  namespace: nordmart-dev-apps
spec:
  ports:
    - name: "kafka-port"
      port: 9092
      targetPort: 9092
  selector:
    app: kafka-cluster
