releases/mongdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: nordmart-dev-apps
spec:
  serviceName: "mongodb"
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongodb
    spec:   
 
      containers:
      - image: mongo:3.4
        name: mongodb
        ports:
        - containerPort: 27017
          name: tcp
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-pvc      
        resources: {}

  volumeClaimTemplates:
  - metadata:
      name: mongodb-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: hdd
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb-svc
  namespace: nordmart-dev-apps
spec:
  ports:
  - name: "mongo-port"
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
